--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,51 @@
-stages:
-- build
-
 variables:
   BUILD_SOURCE: "https://hub.blitznote.com/mark/caddy/builds"
 
 cache:
-  group: go-blitznote-shared
+  key: "go/$CI_BUILD_REF_NAME"
   paths:
   - _vendor-cache/
 
-before_script:
-- mkdir -p _vendor-cache /var/go/ours
-- ln -s "$(pwd -P)/_vendor-cache" /var/go/theirs
-- export GOPATH=/var/go/theirs:/var/go/ours
-- export GODIR=/var/go/ours/src/github.com/mholt/caddy
-- mkdir -p "$(dirname "$GODIR")"
-- ln -sfv "$(pwd -P)" "$GODIR"
-- cd "$GODIR"
-- go get -d
-- mv /var/go/theirs/src/blitznote.com /var/go/ours/src/
-- tree /var/go -d -l -L 5 || true
-- find /var/go/ours/src -mindepth 3 -maxdepth 3 -type d -exec bash -c "cd {}; git log -n 1 --date=relative --pretty=format:'%h - %s (%cr)'" \;
-- find /var/go/theirs/src -mindepth 3 -maxdepth 3 -type d -exec bash -c "cd {}; git log -n 1 --date=relative --pretty=format:'%h - %s (%cr)'" \;
+.go_depends_template: &get_dependencies
+  before_script:
+  - mkdir -p _vendor-cache /var/go/ours
+  - ln -s "$(pwd -P)/_vendor-cache" /var/go/theirs
+  - export GOPATH=/var/go/theirs:/var/go/ours
+
+  - export CADDYDIR=/var/go/ours/src/github.com/mholt/caddy
+  - mkdir -p "$(dirname "$CADDYDIR")"
+  - ln -sfv "$(pwd -P)" "$CADDYDIR"
+  - cd "$CADDYDIR"
+  - go get -d -t
+
+  - mv /var/go/theirs/src/{blitznote.com,plugin.hosting} /var/go/ours/src/ || true
+  - tree /var/go -d -l -L 5 || true
+  - find /var/go/ours/src -mindepth 3 -maxdepth 3 -type d -exec bash -c "cd {}; git log -n 1 --date=relative --pretty=format:'%h - %s (%cr)'" \;
+  - find /var/go/theirs/src -mindepth 3 -maxdepth 3 -type d -exec bash -c "cd {}; git log -n 1 --date=relative --pretty=format:'%h - %s (%cr)'" \;
+
+vet:
+  stage: test
+  <<: *get_dependencies
+  script:
+  - diff <(echo -n) <(gofmt -s -d $(find . -type f -name '*.go' -not -path "./_*"))
+  - go vet ./...
+
+lint:
+  stage: test
+  <<: *get_dependencies
+  script:
+  - /var/go/provided/bin/ineffassign .
+  - /var/go/provided/bin/golint ./...
+
+unittests:
+  stage: test
+  <<: *get_dependencies
+  script:
+  - go test -v ./...
 
 build_binary:
   stage: build
+  <<: *get_dependencies
   only:
   - next
   script:
