--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,10 @@
 variables:
   BUILD_SOURCE: "https://hub.blitznote.com/mark/caddy/builds"
 
+stages:
+- test
+- build
+
 cache:
   key: "go/$CI_BUILD_REF_NAME"
   paths:
@@ -8,6 +12,7 @@ cache:
 
 .go_depends_template: &get_dependencies
   before_script:
+  - cat for-gopkg.in.crt >>/etc/ssl/certs/ca-certificates.crt
   - mkdir -p _vendor-cache /var/go/ours
   - ln -s "$(pwd -P)/_vendor-cache" /var/go/theirs
   - export GOPATH=/var/go/theirs:/var/go/ours
